<resources>
    <string name="app_name">Pallevar</string>
    <string name="username">E-mail</string>
    <string name="psw">Password</string>
    <string name="aplication_name">Shopping Cart</string>
    <string name="aplication_icon">Aplication Icon</string>
    <string name="acess">login</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="recover_psw"><u>Recover Password</u></string>
    <string name="title_activity_core_nav_drawer">CoreNavDrawerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search_products">Search Products</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_core_nav">CoreNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_title">Search...</string>
    <string name="search_hint">Type a product name...</string>
    <string name="create_an_account">Create an Account</string>
    <string name="close_registration">Close Registration</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="register_with_email">Register with your E-mail</string>
    <string name="email_in_use_error">Este e-mail já está em uso!</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="blank_email">Cannot be blank</string>
    <string name="password_min">Min 6 chars</string>
    <string name="blank_pw">Blank password</string>
    <string name="blank_name">Blank name</string>
    <string name="registration_failed">Registration Failed! Check your e-mail and password</string>
    <string name="registration_success">Registration finished! Use your credentials to access your account</string>
    <string name="reset_password_details">You will receive password reset details in your email</string>
    <string name="send">Send</string>
    <string name="recovery_detail_sent">Sent to registered email</string>
    <string name="buyer">Buyer </string>
    <string name="hint_create">Please, select the type of account that you want to create.</string>
    <string name="title_create">Create new account</string>
    <string name="buyer_text">Buyer</string>
    <string name="seller_text">Seller</string>
    <string name="create_a_new_seller_account">Create a new seller account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="step_1_of_3">Step 1 of 3</string>
    <string name="next">Next</string>
    <string name="business_contact">Business contact</string>
    <string name="step_2_of_3">Step 2 of 3</string>
    <string name="close_screen" translatable="false">close screen</string>
    <string name="contact_name">Contact Name</string>
    <string name="nickname">Nickname</string>
    <string name="business_name">Bussiness Name</string>
    <string name="business_address">Bussiness Adrress</string>
    <string name="step_3_of_3">Step 3 of 3</string>
    <string name="phone">Phone</string>
    <string name="yape" translatable="false">Yape</string>
    <string name="finish">Finish</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="pw_not_match">pw dont match</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_in_map">Search in Map</string>
    <string name="find_my_position">find my position</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="search_locations">Search locations...</string>
    <string name="mocked_steak">Steaks</string>


</resources>
